<resources>
    <string name="app_name">Novo Chat</string>
    <string name="item_menu_login">Login</string>
    <string name="item_menu_register">Cadastro</string>
    <string name="item_menu_logout">Logout</string>
    <string name="action_settings">Configurações</string>
    <string name="action_sair">Sair</string>
    <string name="item_enter">Entrar</string>
    <string name="item_add">Adicionar</string>
    <string name="image_logo" />
    <string name="text_login" >LOGIN</string>
    <string name="text_register" >REGISTRAR</string>
    <string name="botao_login">Entrar</string>
    <string name="botao_register">Registrar</string>
    <string name="register_acount">Não tem uma conta? Crie aqui!</string>
    <string name="digite_o_email">Digite o email</string>
    <string name="digite_a_senha">Digite a senha</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
