<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools/"
    xmlns:app1="http://schemas.android.com/apk/res-auto">

   <item android:id="@+id/action_settings" android:title="@string/action_settings"
       android:orderInCategory="100" app:showAsAction="never"/>

   <item android:id="@+id/logout_menu"
      android:title="@string/action_sair"
      android:orderInCategory="200"
      app1:showAsAction="never"/>

   <item android:id="@+id/serach"
      android:title="@string/item_search"
      android:orderInCategory="300"
      app1:showAsAction="ifRoom"
       android:icon="@drawable/ic_search"/>

   <item android:id="@+id/add"
       android:title="@string/item_add"
       android:orderInCategory="400"
       app1:showAsAction="ifRoom"
       android:icon="@drawable/ic_person_add"/>

</menu>