<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fragments.LoginFragment">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fundoLogin"
        tools:context="com.activitys.LoginActivity">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:background="@drawable/fundo_edittext_redondo"
            android:ems="10"
            android:hint="@string/digite_o_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:background="@drawable/fundo_edittext_redondo"
            android:ems="10"
            android:hint="@string/digite_a_senha"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/login_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_email"
            app:layout_constraintTop_toBottomOf="@+id/login_email" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/fundo_botao"
            android:text="@string/botao_login"
            android:textColor="@color/fundoLogin"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/login_password"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_password" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="256dp"
            android:layout_height="286dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/btnLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:srcCompat="@drawable/marca" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
